k8s/network-policies/allow-egress-to-aws.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-aws
  namespace: order-fulfillment
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 5432
          protocol: TCP
        - port: 6379
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
